# DataMiningAssignments

./: 01_environment_setup.ipynb  03_exploratory_data_analysis.ipynb  t3_tasks.py
assignment/: Readme.txt
assignment1/: 02_ds_basics.ipynb  04_basic_visualization.ipynb  05_grammar_of_graphics.ipynb  readme.txt  t2_tasks.py  t3_tasks.py
assignment2/: 00_intro.ipynb  01_configuration.ipynb  02_model_serving.ipynb  03_model_evaluation.ipynb  04_error_estimation.ipynb  05_hyper_parameter_tuning.ipynb  06_putting_it_together.ipynb  07_classification_reports.ipynb  sample_model_report.html
assignment2/code/: custom_metrics.py  error_estimation.py  hp_configs.py  model_report_template.jinja2  model_reports.py  modern_ml_pipeline.py  output.html  pipeline_configs.py  utils.py
assignment2/code/task2/: fastapi_demo.py  gradio_demo.py  textual_demo.py  typer_demo.py
assignment3/: README.md  pyproject.toml
assignment3/src/ds5612_pa3/: __init__.py  part1.ipynb  part3.ipynb
assignment4/: README.md  pyproject.toml
assignment4/src/pa4/: __init__.py  part1.ipynb  part2.ipynb  part3.ipynb  part4.ipynb  part5.ipynb
